--- a/src/main/resources/gui/fxml/SingleProduct.fxml
+++ b/src/main/resources/gui/fxml/SingleProduct.fxml
@@ -16,13 +16,13 @@
 
 <ScrollPane prefHeight="672.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.SingleProductController">
    <content>
-      <VBox prefHeight="658.0" prefWidth="1265.0">
+      <VBox fx:id="mainBox" prefHeight="658.0" prefWidth="1265.0">
          <children>
             <HBox spacing="20.0">
                <children>
                   <VBox spacing="20.0">
                      <children>
-                        <ImageView fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="productImage" fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../pic/background.jpg" />
                            </image>
@@ -70,7 +70,7 @@
                               </HBox>
                               <HBox alignment="CENTER" prefHeight="73.0" prefWidth="254.0">
                                  <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                    <Text fx:id="nameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                                        <font>
                                           <Font size="18.0" />
                                        </font>
@@ -92,7 +92,7 @@
                               </HBox>
                               <HBox alignment="CENTER" prefHeight="70.0" prefWidth="261.0">
                                  <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                    <Text fx:id="brandText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                                        <font>
                                           <Font size="18.0" />
                                        </font>
@@ -114,7 +114,7 @@
                               </HBox>
                               <HBox alignment="CENTER" prefHeight="70.0" prefWidth="261.0">
                                  <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                    <Text fx:id="rateText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                                        <font>
                                           <Font size="18.0" />
                                        </font>
@@ -155,7 +155,7 @@
                               <Font size="18.0" />
                            </font>
                         </Text>
-                        <TextArea prefHeight="302.0" prefWidth="328.0" />
+                        <TextArea fx:id="descriptionText" prefHeight="302.0" prefWidth="328.0" />
                      </children>
                   </VBox>
                   <TableView prefHeight="346.0" prefWidth="266.0">
