--- a/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
+++ b/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,12 +13,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="400.0" prefWidth="320.0">
          <children>
-            <ImageView fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="productImage" fitHeight="240.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../pic/background.jpg" />
                </image>
@@ -28,7 +28,7 @@
                   <HBox alignment="CENTER_LEFT" prefHeight="72.0" prefWidth="335.0" spacing="20.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="67.0" text="Category" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
+                        <Text fx:id="categoryText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
                      </children>
                      <opaqueInsets>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -42,7 +42,7 @@
                   </HBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="320.0" spacing="20.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="76.0" prefWidth="320.0" spacing="20.0">
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
@@ -53,7 +53,26 @@
                   <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="309.0" spacing="20.0">
                      <children>
                         <Label prefHeight="17.0" prefWidth="61.0" text="Rate" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="170.1367392539978" />
+                        <Slider fx:id="productRateSlider" max="5.0" prefHeight="22.0" prefWidth="139.0" showTickLabels="true" showTickMarks="true" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </HBox>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="249.0" prefHeight="72.0" prefWidth="320.0">
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="72.0" prefWidth="335.0" spacing="20.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="67.0" text="State" />
+                        <Text fx:id="categoryText1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="178.80338887373637" />
                      </children>
                      <opaqueInsets>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -73,8 +92,8 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="43.0" prefWidth="260.0" spacing="20.0">
                <children>
-                  <Label prefHeight="17.0" prefWidth="61.0" text="Name" />
-                  <TextField prefHeight="25.0" prefWidth="195.0" />
+                  <Label fx:id="nameLabel" prefHeight="17.0" prefWidth="61.0" text="Name" />
+                  <TextField fx:id="nameTextField" prefHeight="25.0" prefWidth="195.0" />
                </children>
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -89,7 +108,7 @@
             <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="20.0" prefHeight="45.0" prefWidth="260.0" spacing="20.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="61.0" text="Brand" />
-                  <TextField prefHeight="25.0" prefWidth="195.0" />
+                  <TextField fx:id="brandTextField" prefHeight="25.0" prefWidth="195.0" />
                </children>
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -104,7 +123,7 @@
             <HBox alignment="CENTER_LEFT" prefHeight="29.0" prefWidth="260.0" spacing="20.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="61.0" text="Amount" />
-                  <TextField prefHeight="25.0" prefWidth="195.0" />
+                  <TextField fx:id="amountTextField" prefHeight="25.0" prefWidth="195.0" />
                </children>
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -119,7 +138,7 @@
             <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="260.0" spacing="20.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="61.0" text="Price" />
-                  <TextField prefHeight="25.0" prefWidth="195.0" />
+                  <TextField fx:id="priceTextField" prefHeight="25.0" prefWidth="195.0" />
                </children>
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -131,11 +150,11 @@
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </HBox>
-            <TextArea prefHeight="187.0" prefWidth="256.0" />
+            <TextArea fx:id="descriptionTextArea" prefHeight="187.0" prefWidth="256.0" />
             <HBox alignment="CENTER" prefHeight="75.0" prefWidth="280.0" spacing="40.0">
                <children>
-                  <Button mnemonicParsing="false" text="Upload photo" />
-                  <Button mnemonicParsing="false" text="edit" />
+                  <Button fx:id="uploadPhoto" mnemonicParsing="false" onAction="#uploadButtonClicked" text="Upload photo" />
+                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" text="edit" />
                </children>
             </HBox>
          </children>
