--- a/src/main/resources/gui/fxml/OffPageForSeller.fxml
+++ b/src/main/resources/gui/fxml/OffPageForSeller.fxml
@@ -35,15 +35,9 @@
             </HBox>
             <VBox alignment="TOP_CENTER" prefHeight="119.0" prefWidth="150.0">
                <children>
-                  <Label prefHeight="43.0" prefWidth="90.0" text="Max valid off" />
-                  <TextField fx:id="MaxValidOff">
-                     <VBox.margin>
-                        <Insets left="20.0" right="20.0" />
-                     </VBox.margin>
-                  </TextField>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="73.0" prefWidth="145.0">
                      <children>
-                        <Button fx:id="updateButton" mnemonicParsing="false" prefHeight="34.0" prefWidth="108.0" text="update">
+                        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateButtonClicked" prefHeight="34.0" prefWidth="108.0" text="update">
                            <padding>
                               <Insets left="20.0" right="20.0" />
                            </padding>
@@ -73,6 +67,6 @@
             </VBox>
          </children>
       </HBox>
-      <VBox prefHeight="364.0" prefWidth="600.0" />
+      <VBox fx:id="offVBox" prefHeight="364.0" prefWidth="600.0" />
    </children>
 </VBox>
