--- a/src/main/resources/gui/fxml/Main.fxml
+++ b/src/main/resources/gui/fxml/Main.fxml
@@ -7,23 +7,38 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.MainController">
    <top>
-      <HBox spacing="15.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="topBox" spacing="15.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Home">
+            <Button fx:id="homeButton" mnemonicParsing="false" text="Home">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Region HBox.hgrow="ALWAYS" />
-            <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="Login">
+            <Button fx:id="cartButton" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="Cart">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="1212.0" layoutY="30.0" mnemonicParsing="false" text="Register">
+            <Region prefWidth="50.0" />
+            <Button fx:id="loginButton" layoutX="1212.0" layoutY="30.0" mnemonicParsing="false" text="Login">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="registerButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" text="Register">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="accountButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" text="Account">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="logoutButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" text="Logout">
                <font>
                   <Font size="14.0" />
                </font>
