--- a/src/main/resources/gui/fxml/CreateOffForSeller.fxml
+++ b/src/main/resources/gui/fxml/CreateOffForSeller.fxml
@@ -11,7 +11,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0"
       prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="view.gui.CreateOfForSellerController">
+      fx:controller="view.gui.seller.CreateOfForSellerController">
     <children>
         <HBox prefHeight="153.0" prefWidth="600.0">
             <children>
