--- a/src/main/resources/gui/fxml/LoginPage.fxml
+++ b/src/main/resources/gui/fxml/LoginPage.fxml
@@ -18,7 +18,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="73.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../Desktop/Picture/Myspace-Logo-Icon-14.png" />
+                  <Image url="@../pic/Myspace-Logo-Icon-14.png" />
                </image>
             </ImageView>
          </children></AnchorPane>
@@ -38,12 +38,12 @@
             <Hyperlink id="registerHyperLink" layoutX="111.0" layoutY="351.0" text="Register Here!" />
             <ImageView fitHeight="23.0" fitWidth="21.0" layoutX="39.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../Desktop/Picture/icons8-user-24.png" />
+                  <Image url="@../pic/icons8-user-24.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="23.0" fitWidth="21.0" layoutX="39.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../Desktop/Picture/icons8-password-30.png" />
+                  <Image url="@../pic/icons8-password-30.png" />
                </image>
             </ImageView>
          </children>
