--- a/src/main/resources/gui/fxml/LoginPage.fxml
+++ b/src/main/resources/gui/fxml/LoginPage.fxml
@@ -35,7 +35,7 @@
                </font>
             </Label>
             <Text layoutX="91.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="don't have an account?" />
-            <Hyperlink id="registerHyperLink" layoutX="111.0" layoutY="351.0" text="Register Here!" />
+            <Hyperlink id="registerHyperLink" layoutX="111.0" layoutY="351.0" onMouseClicked="#redirectToRegister" text="Register Here!" />
             <ImageView fitHeight="23.0" fitWidth="21.0" layoutX="39.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../pic/icons8-user-24.png" />
